--- a/_includes/base.html
+++ b/_includes/base.html
@@ -1,5 +1,5 @@
 <!-- _includes/base.html -->
-{% assign base = '' %}
+{% assign base = '.' %}
 {% assign depth = page.url | split: '/' | size | minus: 1 %}
 {% if    depth == 1 %}{% assign base = '.' %}
 {% elsif depth == 2 %}{% assign base = '..' %}
