--- a/UIs/nVISAR2.ui
+++ b/UIs/nVISAR2.ui
@@ -114,7 +114,7 @@
          <string/>
         </property>
         <property name="icon">
-         <iconset resource="../resources/icons/icons.qrc">
+         <iconset resource="../../neutrino-build/src/icons.qrc">
           <normaloff>:/icons/refresh.png</normaloff>:/icons/refresh.png</iconset>
         </property>
         <property name="neutrinoSave" stdset="0">
@@ -192,7 +192,7 @@
             <string>...</string>
            </property>
            <property name="icon">
-            <iconset resource="../resources/icons/icons.qrc">
+            <iconset resource="../../neutrino-build/src/icons.qrc">
              <normaloff>:/icons/refresh2.png</normaloff>:/icons/refresh2.png</iconset>
            </property>
            <property name="neutrinoSave" stdset="0">
@@ -390,15 +390,19 @@
     </widget>
    </item>
    <item>
-    <widget class="nVisarPlot" name="plotPhaseIntensity" native="true"/>
+    <widget class="nCustomPlotMouseX3Y" name="plotPhaseIntensity" native="true">
+     <property name="mouseTracking">
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>nVisarPlot</class>
+   <class>nCustomPlotMouseX3Y</class>
    <extends>QWidget</extends>
-   <header>nVisar.h</header>
+   <header>nCustomPlots.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
@@ -419,7 +423,7 @@
   <tabstop>multRef</tabstop>
  </tabstops>
  <resources>
-  <include location="../resources/icons/icons.qrc"/>
+  <include location="../../neutrino-build/src/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
