--- a/UIs/nVISAR1.ui
+++ b/UIs/nVISAR1.ui
@@ -330,7 +330,7 @@
         <item row="1" column="2">
          <widget class="QGroupBox" name="groupBox_4">
           <property name="title">
-           <string>Time scale and direction</string>
+           <string>Sweep time and direction</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_11" columnstretch="1,0">
            <property name="leftMargin">
@@ -369,6 +369,9 @@
            </item>
            <item row="0" column="0">
             <widget class="QLineEdit" name="sopScale">
+             <property name="toolTip">
+              <string>Sweep time (polynomial expansion)</string>
+             </property>
              <property name="neutrinoSave" stdset="0">
               <bool>true</bool>
              </property>
@@ -806,6 +809,7 @@
   <tabstop>sopOrigin</tabstop>
   <tabstop>sopTimeOffset</tabstop>
   <tabstop>whichRefl</tabstop>
+  <tabstop>sopScale</tabstop>
   <tabstop>sopDirection</tabstop>
   <tabstop>sopCalibT0</tabstop>
   <tabstop>sopCalibA</tabstop>
