--- a/UIs/nVISAR3.ui
+++ b/UIs/nVISAR3.ui
@@ -33,7 +33,7 @@
    </property>
    <item>
     <widget class="QWidget" name="widget_2" native="true">
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0,1">
       <property name="leftMargin">
        <number>0</number>
       </property>
@@ -72,7 +72,7 @@
             </font>
            </property>
            <property name="suffix">
-            <string> [v/fringe]</string>
+            <string> [v/fr]</string>
            </property>
            <property name="decimals">
             <number>5</number>
@@ -100,7 +100,7 @@
       <item>
        <widget class="QGroupBox" name="groupBox">
         <property name="title">
-         <string>Time 0</string>
+         <string>Time 0 &amp;&amp; delay</string>
         </property>
         <layout class="QGridLayout" name="gridLayout_3">
          <property name="leftMargin">
@@ -169,7 +169,7 @@
       <item>
        <widget class="QGroupBox" name="groupBox_4">
         <property name="title">
-         <string>Time scale [time/px]</string>
+         <string>Sweep time</string>
         </property>
         <layout class="QGridLayout" name="gridLayout_4">
          <property name="leftMargin">
@@ -186,6 +186,9 @@
          </property>
          <item row="0" column="0">
           <widget class="QLineEdit" name="physScale">
+           <property name="toolTip">
+            <string>Sweep time (polynomial expansion)</string>
+           </property>
            <property name="neutrinoSave" stdset="0">
             <bool>true</bool>
            </property>
@@ -199,7 +202,7 @@
    </item>
    <item>
     <widget class="QWidget" name="widget" native="true">
-     <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,0">
+     <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,1">
       <property name="leftMargin">
        <number>0</number>
       </property>
@@ -426,6 +429,7 @@
   <tabstop>sensitivity</tabstop>
   <tabstop>physOrigin</tabstop>
   <tabstop>offsetTime</tabstop>
+  <tabstop>physScale</tabstop>
   <tabstop>offsetShift</tabstop>
   <tabstop>reflOffset</tabstop>
   <tabstop>reflRef</tabstop>
