--- a/UIs/nCustomPlot.ui
+++ b/UIs/nCustomPlot.ui
@@ -30,7 +30,7 @@
     <property name="bottomMargin">
      <number>4</number>
     </property>
-    <item row="2" column="0">
+    <item row="4" column="0">
      <widget class="QGroupBox" name="groupBox_1">
       <property name="title">
        <string>Export data</string>
@@ -89,6 +89,47 @@
      </widget>
     </item>
     <item row="1" column="0">
+     <widget class="QGroupBox" name="groupBox">
+      <property name="title">
+       <string>Title</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_2">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+       <item row="1" column="0">
+        <widget class="QLineEdit" name="plotTitle">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QToolButton" name="fontTitle">
+         <property name="text">
+          <string>...</string>
+         </property>
+         <property name="icon">
+          <iconset resource="../../neutrino-build/src/icons.qrc">
+           <normaloff>:/icons/font.png</normaloff>:/icons/font.png</iconset>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="3" column="0">
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -101,7 +142,7 @@
       </property>
      </spacer>
     </item>
-    <item row="0" column="0">
+    <item row="2" column="0">
      <widget class="QGroupBox" name="groupBox_2">
       <property name="font">
        <font>
@@ -122,7 +163,7 @@
         <number>0</number>
        </property>
        <item row="0" column="0">
-        <layout class="QGridLayout" name="labels_layout" columnstretch="0,1,0,0,0,0">
+        <layout class="QGridLayout" name="labels_layout" columnstretch="0,1,0,0,0,0,0">
          <item row="0" column="4">
           <widget class="QLabel" name="label_4">
            <property name="font">
@@ -210,6 +251,18 @@
            </property>
            <property name="alignment">
             <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="6">
+          <widget class="QLabel" name="label_7">
+           <property name="font">
+            <font>
+             <pointsize>10</pointsize>
+            </font>
+           </property>
+           <property name="text">
+            <string>Font</string>
            </property>
           </widget>
          </item>
