A lot of stuff (#41)
* travis qt5

* travis qt5 2

* travis qt5 3

* travis qt5 4

* travis qt5 5

* fix qt4

* fix qt4 2

* fix qt4 3

* fix qt4 4

* test qt5

* test qt5 2

* test qt5 3

* test qt5 4

* test qt5 5

* test qt5 6

* test qt5 7

* test compiler

* test qt5 8

* test qt5 9

* test qt5 10

* test qt5 11

* test qt5 12

* test qt5 13

* test qt5 14

* test qt5 15

* test qt5 16

* test new travis repo

* test new travis repo 2

* test new travis repo 3

* test new travis repo 4

* test new travis repo 6

* test new travis repo 7

* test new travis repo 8

* test new travis repo 9

* test new travis repo 10

* test new travis repo 11

* test new travis repo 12

* fix macdeploy

* fix macdeploy 2

* fix macdeploy 3

* fix travis

* revert travis repo

* fix mac deploy

* fix mac deploy and cleanup

* fix travis

* travis osx

* fix travis 1

* fix travis 2

* fix travis 3

* fix qt5 without python

* fix qt5 without python 2

* fix travis pythonqt

* fix travis pythonqt

* fix qt5 without python 3

* fix travis

* fix travis 2

* fix travis 3

* fix travis 4

* fix travis 5

* fix travis 6

* fix pythonqt version

* fix pythonqt version 2

* fix pythonqt version 3

* fix pythonqt version 4

* fix pythonqt version 3

* travis

* travis

* travis 2

* travis 3

* travis 4

* travis 5

* travis 6

* travis 7

* travis 8

* travis 9

* travis 10

* osx compatibility

* osx compatibility

* osx compatibility 3

* test tagging

* fix travis depth

* fix travis tag

* fix travis tag 2

* fix travis tag 3

* fix travis tag 4

* fix travis tag 4

* fix travis tag 5

* fix travis tag 6

* fix travis

* fix travis 2

* fix travis 3

* fix travis 4

* fix travis 5

* fix travis 6

* fix travis 7

* fix travis 8

* fix travis 9

* fix travis 10

* fix travis 11

* fix travi

--- a/UIs/nVISAR2.ui
+++ b/UIs/nVISAR2.ui
@@ -114,7 +114,7 @@
          <string/>
         </property>
         <property name="icon">
-         <iconset resource="../resources/icons/icons.qrc">
+         <iconset resource="../../neutrino-build/src/icons.qrc">
           <normaloff>:/icons/refresh.png</normaloff>:/icons/refresh.png</iconset>
         </property>
         <property name="neutrinoSave" stdset="0">
@@ -192,7 +192,7 @@
             <string>...</string>
            </property>
            <property name="icon">
-            <iconset resource="../resources/icons/icons.qrc">
+            <iconset resource="../../neutrino-build/src/icons.qrc">
              <normaloff>:/icons/refresh2.png</normaloff>:/icons/refresh2.png</iconset>
            </property>
            <property name="neutrinoSave" stdset="0">
@@ -219,6 +219,9 @@
          </item>
          <item row="0" column="4">
           <widget class="QDoubleSpinBox" name="angle">
+           <property name="toolTip">
+            <string>Fringes orientation</string>
+           </property>
            <property name="suffix">
             <string>˚</string>
            </property>
@@ -257,8 +260,11 @@
       </item>
       <item>
        <widget class="QGroupBox" name="groupBox_4">
+        <property name="toolTip">
+         <string>Sweep speed (if multiple values take the polynome)</string>
+        </property>
         <property name="title">
-         <string>Time res.</string>
+         <string>Time resolution</string>
         </property>
         <layout class="QGridLayout" name="gridLayout_4">
          <property name="leftMargin">
@@ -313,7 +319,7 @@
       <item row="0" column="1">
        <widget class="QDoubleSpinBox" name="offRef">
         <property name="toolTip">
-         <string>offset reference</string>
+         <string>offset reference (dark value)</string>
         </property>
         <property name="suffix">
          <string> [counts]</string>
@@ -329,7 +335,7 @@
       <item row="0" column="2">
        <widget class="QDoubleSpinBox" name="offShot">
         <property name="toolTip">
-         <string>offset shot</string>
+         <string>offset shot (dark value)</string>
         </property>
         <property name="suffix">
          <string> [counts]</string>
@@ -345,7 +351,7 @@
       <item row="0" column="3">
        <widget class="QSpinBox" name="intensityShift">
         <property name="toolTip">
-         <string>Pixel delay of intensity between probe and shot</string>
+         <string>Pixel time delay of intensity between probe and shot</string>
         </property>
         <property name="suffix">
          <string> [px]</string>
@@ -364,7 +370,7 @@
       <item row="0" column="4">
        <widget class="QDoubleSpinBox" name="multRef">
         <property name="toolTip">
-         <string>Reference multiplication factor</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Reference multiplication factor:&lt;/p&gt;&lt;p&gt;Fix jitter between ref. and shot&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="suffix">
          <string> X</string>
@@ -390,15 +396,19 @@
     </widget>
    </item>
    <item>
-    <widget class="nVisarPlot" name="plotPhaseIntensity" native="true"/>
+    <widget class="nCustomPlotMouseX3Y" name="plotPhaseIntensity" native="true">
+     <property name="mouseTracking">
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>nVisarPlot</class>
+   <class>nCustomPlotMouseX3Y</class>
    <extends>QWidget</extends>
-   <header>nVisar.h</header>
+   <header>nCustomPlots.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
@@ -419,7 +429,7 @@
   <tabstop>multRef</tabstop>
  </tabstops>
  <resources>
-  <include location="../resources/icons/icons.qrc"/>
+  <include location="../../neutrino-build/src/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
